--- a/package.json
+++ b/package.json
@@ -9,14 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "canvas": "^3.1.2",
-    "gsap": "^3.13.0",
     "next": "15.3.4",
     "react": "^19.1.0",
-    "react-custom-roulette": "^1.4.1",
-    "react-dom": "^19.1.0",
-    "react-spin-wheel": "^0.0.7",
-    "react-wheel-of-prizes": "^1.1.0",
-    "winwheel": "^1.0.1"
+    "react-dom": "^19.1.0"
   }
 }
